Fixed Moon switch function, fixed star overlap and location issue, reworked Rock obstacles and player resets

--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,15 @@ h2,
 
 #scoreboard,
 button,
-li {
+li,
+p {
   font-family: Overpass Mono;
   color: white;
+}
+
+p {
+  font-style: italic;
+  font-weight: bolder;
 }
 
 .modal {
